--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.0-beta3",
+    "bootstrap-icons": "^1.5.0",
+    "js-cookie": "^2.2.1",
     "next": "10.2.3",
+    "next-cookies": "^2.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
