--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.5.0",
     "js-cookie": "^2.2.1",
+    "mysql2": "^2.2.5",
     "next": "10.2.3",
     "next-cookies": "^2.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-paginate": "^7.1.3",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.2"
   }
 }
