--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-paginate": "^7.1.3",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2"
   }
