--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.5.0",
+    "chart.js": "^3.3.2",
     "js-cookie": "^2.2.1",
     "mysql2": "^2.2.5",
     "next": "10.2.3",
     "next-cookies": "^2.0.3",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "17.0.2",
     "react-paginate": "^7.1.3",
     "react-redux": "^7.2.4",
